# my_c-_boilerplate

./: CMakeLists.txt  README.md
include/: main.hpp
include/module1/: hello_module1.hpp
include/module2/: hello_module2.hpp
src/: main.cpp
src/module1/: hello_module1.cpp
src/module2/: hello_module2.cpp
